gudokjoa5/deployment/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gudokjoa5
  labels:
    app: gudokjoa5
spec:
  selector:
    matchLabels:
      app: gudokjoa5
  replicas: 1
  template:
    metadata:
      name: gudokjoa5
      labels:
        app: gudokjoa5
    spec:
      containers:
        - name: gudokjoa5
          image: docker.io/tmdrb0912/gudokjoa5:latest
          imagePullPolicy: Always
          ports:
            - name: port1
              containerPort: 8081
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1024Mi

---

apiVersion: v1
kind: Service
metadata:
  name: gudokjoa5
spec:
  type: ClusterIP
  selector:
    app: gudokjoa5
  ports:
    - name: gudokjoa5
      port: 8080
      targetPort: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gudokjoa5
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: gudokjoa5.165.192.105.60.nip.io
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: gudokjoa5
                port: 
                  number: 8080
